Add more features, get scripted test working.

--- a/src/sbt-test/sbt-openapi-codegen/simple/src/main/openapi/simple_test.yml
+++ b/src/sbt-test/sbt-openapi-codegen/simple/src/main/openapi/simple_test.yml
@@ -1,63 +1,42 @@
-openapi: '2.0.0'
-info :
-  description: 'This should describe an API'
-  version: '2.0.0'
-  title: 'Test API'
-  termsOfService: 'http://reactific.com/no-this-isnt-valid/'
-  contact:
-    name: 'Example.com'
-    url: 'https://example.com'
-    email: 'sbttest@example.com'
+swagger: "2.0"
+info:
+  version: "2.0"
+  title: 'Example API'
   license:
     name: Proprietary
     url: 'http://example.com/contact-us/'
-servers:
-  - url: "https://dev.example.com/v2"
-    description: "Development Server"
-  - url: "https://staging.example.com/v2"
-    description: "Staging Server"
-  - url: "https://{tenant}.{provider}:${port}/{version}"
-    description: "Production Server"
-    variables:
-      provider:
-        default: "example.com"
-        description: "The service provider of the Test API"
-      tenant:
-        default: demo
-        description: Service provider name for the tenant (group, organization, company) being addressed by the API.
-      port:
-        enum:
-          - '8443'
-          - '443'
-          - '80'
-        default: '443'
-      version:
-        enum:
-          - 'v2'
-        default: v2
+host: api.example.com
+basePath: /v1
+schemes:
+  - http
+  - https
+consumes:
+  - application/json
+produces:
+  - application/json
 paths:
-  /test/path:
-    summary: 'Test Path'
-    description: 'This tests an API'
+  /thing/aspect:
+    summary: 'Aspect of Thing'
+    description: 'Handles requests involving an aspect of a thing'
     post:
-      description: "Takes the test"
+      description: "Upload a thing's aspect"
+      operationId: ThingAspectPost
       responses:
         200:
           $ref: '#/components/responses/apiResp'
     get:
-      description: "Gets the test"
+      description: "Get a thing's aspect"
+      operationId: ThingAspectGet
       responses:
         200:
           $ref: '#/components/responses/apiResp'
-
-
 components:
   securitySchemes:
     api_key:
       type: apiKey
       name: robothive_api_key
       in: header
-      description: "API Key for Application"
+      description: "API Key for RobotHive"
     basic:
       type: http
       scheme: basic
